--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,42 @@
-name: Deploy Static Website to S3
+name: Deploy Vite React App to S3
 
 on:
   push:
     branches:
-      - main  # or 'master'
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout source code
         uses: actions/checkout@v3
 
-      - name: Setup Node (if your site uses npm build)
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-
       - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
+      - name: Debug workspace (optional)
         run: |
-          if [ -f package.json ]; then
-            npm install
-            npm run build || echo "No build script found"
-          fi
+          echo "Current path:"
+          pwd
+          echo "List of files in dist folder:"
+          ls -R dist || echo "dist folder not found!"
 
       - name: Deploy to S3
-        uses: jakejarvis/s3-sync-action@v0.5.1
+        uses: jakejarvis/s3-sync-action@master
         with:
           args: --delete
         env:
-          AWS_S3_BUCKET: wedding-static-yigo
+          AWS_S3_BUCKET: ${{ secrets.S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ap-south-1
-          SOURCE_DIR: dist  # or ./build for React, or ./ for pure HTML
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          SOURCE_DIR: dist
