--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build and export Next.js
-        run: |
-          npm run build
-          npm run export
+      - name: Build Next.js static site
+        run: npm run build
 
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@v0.5.1
