docs: GitHub Actions 배포 이슈 해결 및 배포 가이드 추가
🔧 **문제 분석:**
- GitHub Actions에서 AWS_ACCESS_KEY_ID 미설정 오류
- 동적 라우트로 인한 정적 빌드(output: 'export') 불가능
- S3 정적 배포 방식이 프로젝트 구조와 맞지 않음

✅ **해결 방안:**
1. next.config.ts의 output: 'export' 비활성화 (동적 라우트 지원)
2. GitHub Actions 워크플로우 비활성화
3. Vercel/Netlify SSR 배포 권장으로 전환

📝 **추가된 문서:**
- docs/DEPLOYMENT.md 생성
  - Vercel 배포 가이드 (권장)
  - AWS Amplify 배포 가이드
  - Netlify 배포 가이드
  - S3 정적 배포 불가능 이유 설명
  - 환경별 설정 및 문제 해결 가이드

🎯 **권장 배포 전략:**
- 고객용 페이지(/c/*): 정적 가능
- 관리자 페이지(/admin/*): SSR 필수
- 동적 라우트: /admin/timetable/[projectId], /admin/gallery/[projectId]

✅ **빌드 상태:** 성공 (37/37 페이지)

💡 **다음 단계:**
- Vercel 또는 Netlify Git Integration 활성화
- 또는 프로젝트 분리 (고객용/관리자용)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,36 +1,24 @@
-name: Deploy Next.js Static Site to S3
+name: Deploy to Vercel (Recommended for SSR)
+
+# ⚠️ 중요: 이 프로젝트는 동적 라우트를 사용하므로 정적 빌드(S3) 대신
+# 서버사이드 렌더링을 지원하는 플랫폼(Vercel, Netlify)을 권장합니다.
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
-  deploy:
+  # 이 워크플로우는 비활성화되어 있습니다.
+  # Vercel을 사용하는 경우 Vercel Git Integration을 활성화하세요:
+  # https://vercel.com/docs/deployments/git
+  
+  placeholder:
     runs-on: ubuntu-latest
-
+    if: false # 비활성화
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.11.0'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build Next.js static site
-        run: npm run build
-
-      - name: Deploy to S3
-        uses: jakejarvis/s3-sync-action@v0.5.1
-        with:
-          args: --delete
-        env:
-          AWS_S3_BUCKET: wedding-yigo
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ap-south-1
-          SOURCE_DIR: ./out
+      - name: Info
+        run: |
+          echo "이 워크플로우는 비활성화되어 있습니다."
+          echo "Vercel 또는 Netlify Git Integration을 사용하여 자동 배포하세요."
