--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,4 @@
-name: Deploy to S3 (Standalone Build)
-
-# ⚠️ 주의: 이 방식은 권장하지 않습니다!
-# 동적 라우트를 사용하는 Next.js는 Vercel/Netlify가 적합합니다.
-# 그러나 S3 배포가 필요한 경우 standalone 빌드를 사용합니다.
+name: Deploy to S3 (Debug)
 
 on:
   push:
@@ -18,6 +14,24 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Check secrets (디버그)
+        run: |
+          echo "Checking if secrets are available..."
+          if [ -z "${{ secrets.AWS_ACCESS_KEY_ID }}" ]; then
+            echo "❌ AWS_ACCESS_KEY_ID is NOT set"
+          else
+            echo "✅ AWS_ACCESS_KEY_ID is set (length: ${#AWS_ACCESS_KEY_ID})"
+          fi
+          
+          if [ -z "${{ secrets.AWS_SECRET_ACCESS_KEY }}" ]; then
+            echo "❌ AWS_SECRET_ACCESS_KEY is NOT set"
+          else
+            echo "✅ AWS_SECRET_ACCESS_KEY is set (length: ${#AWS_SECRET_ACCESS_KEY})"
+          fi
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -27,7 +41,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build Next.js (Server Build)
+      - name: Build Next.js
         run: npm run build
         env:
           NODE_ENV: production
@@ -35,10 +49,11 @@ jobs:
       - name: Prepare deployment files
         run: |
           echo "📦 Preparing files for S3..."
+          mkdir -p deploy_temp
           
           # public 폴더 복사
           if [ -d "public" ]; then
-            cp -r public deploy_temp/
+            cp -r public/* deploy_temp/ 2>/dev/null || true
           fi
           
           # .next/static 복사
@@ -47,12 +62,8 @@ jobs:
             cp -r .next/static deploy_temp/_next/
           fi
           
-          # 기타 정적 파일
-          if [ -f ".next/BUILD_ID" ]; then
-            cp .next/BUILD_ID deploy_temp/
-          fi
-          
-          ls -la deploy_temp/
+          echo "Files prepared:"
+          ls -la deploy_temp/ || echo "deploy_temp is empty"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -61,36 +72,37 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
 
+      - name: Verify AWS credentials
+        run: |
+          echo "Testing AWS credentials..."
+          aws sts get-caller-identity || echo "❌ AWS credentials verification failed"
+
       - name: Deploy to S3
         run: |
           echo "🚀 Uploading to S3..."
           
-          # 정적 파일 업로드 (캐시 적용)
-          aws s3 sync deploy_temp s3://wedding-yigo \
-            --delete \
-            --cache-control "public, max-age=31536000, immutable" \
-            --exclude "*.html"
-          
-          # HTML 파일 업로드 (캐시 없음)
-          aws s3 sync deploy_temp s3://wedding-yigo \
-            --cache-control "public, max-age=0, must-revalidate" \
-            --exclude "*" \
-            --include "*.html"
-          
-          echo "✅ Upload complete"
+          if [ -d "deploy_temp" ] && [ "$(ls -A deploy_temp)" ]; then
+            # 정적 파일 업로드 (캐시 적용)
+            aws s3 sync deploy_temp s3://wedding-yigo \
+              --delete \
+              --cache-control "public, max-age=31536000, immutable" \
+              --exclude "*.html"
+            
+            # HTML 파일 업로드 (캐시 없음)
+            aws s3 sync deploy_temp s3://wedding-yigo \
+              --cache-control "public, max-age=0, must-revalidate" \
+              --exclude "*" \
+              --include "*.html"
+            
+            echo "✅ Upload complete"
+          else
+            echo "⚠️ No files to deploy"
+          fi
 
-      - name: Warning Message
+      - name: Deployment Summary
         run: |
-          echo "⚠️⚠️⚠️ 중요한 경고 ⚠️⚠️⚠️"
+          echo "🎉 Deployment workflow completed!"
+          echo "📦 S3 Bucket: s3://wedding-yigo"
+          echo "🌍 Region: ap-south-1"
           echo ""
-          echo "S3 정적 배포는 다음 페이지가 작동하지 않습니다:"
-          echo "- /admin/timetable/[projectId]"
-          echo "- /admin/gallery/[projectId]/upload"
-          echo "- /gallery/[galleryId]"
-          echo ""
-          echo "해결 방법:"
-          echo "1. Vercel/Netlify 사용 (권장)"
-          echo "2. API Gateway + Lambda 추가"
-          echo "3. CloudFront Functions로 라우팅 처리"
-          echo ""
-          echo "현재는 정적 파일만 배포되었습니다."
+          echo "⚠️ 참고: 동적 라우트는 Vercel/Netlify 권장"
