🔧 Fix: AWS 리전을 서울(ap-northeast-2)로 수정 + IAM 설정 가이드
✅ GitHub Actions 워크플로우 수정:
- AWS 리전: ap-south-1 → ap-northeast-2 (서울)
- S3 버킷: wedding-yigo (확인됨)

📚 IAM 설정 가이드 추가:
- AWS_IAM_SETUP_GUIDE.md 생성
- IAM 사용자 생성 단계별 가이드
- Access Key 생성 방법
- GitHub Secrets 설정 방법
- 스크린샷 포함 상세 설명

🔐 보안 가이드 포함:
- 최소 권한 정책 예시
- Access Key 안전 관리 방법
- 문제 해결 가이드

📝 다음 단계:
1. AWS IAM 사용자 생성 (가이드 참조)
2. Access Key 생성 및 복사
3. GitHub Secrets 추가
4. Actions 재실행

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,7 +70,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1
+          aws-region: ap-northeast-2
 
       - name: Verify AWS credentials
         run: |
@@ -103,6 +103,6 @@ jobs:
         run: |
           echo "🎉 Deployment workflow completed!"
           echo "📦 S3 Bucket: s3://wedding-yigo"
-          echo "🌍 Region: ap-south-1"
+          echo "🌍 Region: ap-northeast-2 (서울)"
           echo ""
           echo "⚠️ 참고: 동적 라우트는 Vercel/Netlify 권장"
