🔒 Add: S3 배포 환경 비밀번호 보호 기능 추가
## 주요 변경사항
- 프로덕션 환경에서만 활성화되는 비밀번호 보호 기능 구현
- 로컬 개발 환경에서는 비밀번호 화면 비활성화
- localStorage 기반 24시간 세션 관리

## 구현 내역
- components/auth/password-protection.tsx: 비밀번호 보호 컴포넌트 생성
- app/layout.tsx: PasswordProtection 컴포넌트 통합
- 환경 변수 기반 조건부 렌더링
- 사용자 친화적인 비밀번호 입력 UI

## 설정 가이드
- .env.local: 개발 환경 (비밀번호 보호 비활성화)
- .env.production: 프로덕션 환경 (비밀번호 보호 활성화)
- DEPLOYMENT_PASSWORD_SETUP.md: 상세 설정 가이드

## 배포
- scripts/deploy-split.sh: 환경 변수 확인 로직 추가
- 프로덕션 빌드 시 자동으로 NEXT_PUBLIC_ENVIRONMENT=production 설정

--- a/.env.example
+++ b/.env.example
@@ -1,43 +1,9 @@
-# MindGraphy Environment Variables
-# Copy this file to .env.local and fill in your values
+# 로컬 개발 환경 설정
+# .env.local 파일을 생성하고 아래 내용을 복사하세요
 
-# Application
-NODE_ENV=development
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-NEXT_PUBLIC_APP_NAME=MindGraphy
+# 환경 구분 (development | production)
+NEXT_PUBLIC_ENVIRONMENT=development
 
-# API Configuration (for future backend integration)
-# NEXT_PUBLIC_API_URL=https://api.mindgraphy.com
-# API_KEY=your-api-key-here
-
-# Authentication (for future implementation)
-# NEXT_PUBLIC_AUTH_PROVIDER=jwt
-# JWT_SECRET=your-jwt-secret-here
-# SESSION_SECRET=your-session-secret-here
-
-# File Storage (for future implementation)
-# AWS_REGION=ap-northeast-2
-# AWS_ACCESS_KEY_ID=your-access-key
-# AWS_SECRET_ACCESS_KEY=your-secret-key
-# AWS_S3_BUCKET=mindgraphy-uploads
-
-# Email Service (for future implementation)
-# SMTP_HOST=smtp.gmail.com
-# SMTP_PORT=587
-# SMTP_USER=your-email@gmail.com
-# SMTP_PASSWORD=your-app-password
-
-# SMS Service (for future implementation)
-# SMS_API_KEY=your-sms-api-key
-# SMS_SENDER=010-0000-0000
-
-# Payment Gateway (for future implementation)
-# PAYMENT_API_KEY=your-payment-api-key
-# PAYMENT_SECRET=your-payment-secret
-
-# Analytics (optional)
-# NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
-# NEXT_PUBLIC_HOTJAR_ID=your-hotjar-id
-
-# Development
-# NEXT_PUBLIC_ENABLE_MOCK_API=true
+# 프로덕션 배포 시 사이트 접근 비밀번호
+# production 환경에서만 활성화됩니다
+# NEXT_PUBLIC_SITE_PASSWORD=your-secure-password-here
