🔧 Config: GitHub Actions에 비밀번호 환경 변수 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,8 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
+          NEXT_PUBLIC_ENVIRONMENT: production
+          NEXT_PUBLIC_SITE_PASSWORD: ${{ secrets.SITE_PASSWORD }}
 
       - name: Prepare deployment files
         run: |
