--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "deploy": "./scripts/deploy-split.sh all",
     "deploy:www": "./scripts/deploy-split.sh www",
     "deploy:portal": "./scripts/deploy-split.sh portal",
-    "deploy:admin": "./scripts/deploy-split.sh admin"
+    "deploy:admin": "./scripts/deploy-split.sh admin",
+    "deploy:tosspay": "./scripts/deploy-split.sh tosspay"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.19",
