refactor: tosspay → shop 리브랜딩 (URL, 파일명, 디렉토리 전체)
🔄 심사 대비 중립적 이름으로 전면 변경

✅ 디렉토리 구조:
- app/(tosspay) → app/(shop)
- app/(tosspay)/tosspay → app/(shop)/shop
- components/tosspay → components/shop

✅ 파일명:
- tosspay-header.tsx → shop-header.tsx
- tosspay-footer.tsx → shop-footer.tsx
- tosspay-products.ts → shop-products.ts
- tosspay.config.ts → shop.config.ts

✅ URL 경로:
- /tosspay/* → /shop/*
- 모든 내부 링크 및 라우팅 업데이트

✅ 코드 내부:
- TossPayProduct → ShopProduct
- mockTossPayProducts → mockShopProducts
- TossPayHeader → ShopHeader
- TossPayFooter → ShopFooter
- createTossPayment → createPayment
- approveTossPayment → approvePayment
- cancelTossPayment → cancelPayment

✅ 문서:
- TOSSPAY_COMMERCE_COMPLETE.md → SHOP_COMMERCE_COMPLETE.md
- TOSSPAY_SETUP_COMPLETE.md → SHOP_SETUP_COMPLETE.md
- TOSSPAYMENTS_INTEGRATION_GUIDE.md → PAYMENT_INTEGRATION_GUIDE.md

✅ 배포 스크립트:
- TOSSPAY_BUCKET → SHOP_BUCKET
- TOSSPAY_DISTRIBUTION → SHOP_DISTRIBUTION
- npm run deploy:tosspay → npm run deploy:shop

✅ 스토리지:
- tosspay-cart-storage → shop-cart-storage

⚠️ 참고:
- 실제 API 엔드포인트(api.tosspayments.com)는 유지
  → 백엔드 연동 시 실제 사용하는 API이므로
- 주석의 문서 링크(docs.tosspayments.com)도 유지

총 66개 라우트 생성 완료
빌드 성공 확인 ✓

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "deploy:www": "./scripts/deploy-split.sh www",
     "deploy:portal": "./scripts/deploy-split.sh portal",
     "deploy:admin": "./scripts/deploy-split.sh admin",
-    "deploy:tosspay": "./scripts/deploy-split.sh tosspay"
+    "deploy:shop": "./scripts/deploy-split.sh shop"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.19",
